# oas

./: .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  USAGE_GUIDE.md
examples/: comprehensive_example.rs  easy_usage.rs
examples/v3.0/json/: petstore-expanded.json  uspto.json
src/: builders.rs  extensions.rs  lib.rs  security.rs  types.rs
