[package]
name = "oas"
description = "OpenAPi Specification"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
serde = {version = "1", features=["derive"]}
serde_json = "1"
serde_with = "2.2.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
